k8s/file-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server
  namespace: lrms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-server
  template:
    metadata:
      labels:
        app: file-server
    spec:
      containers:
        - name: file-server
          image: registry.digitalocean.com/ece1779lrms/file-server:latest
          ports:
            - containerPort: 5002
