k8s/system-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-server
  namespace: lrms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-server
  template:
    metadata:
      labels:
        app: system-server
    spec:
      containers:
        - name: system-server
          image: registry.digitalocean.com/ece1779lrms/system-server:latest
          ports:
            - containerPort: 5003
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
