k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: lrms
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
