k8s/file-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-server
  namespace: lrms
spec:
  selector:
    app: file-server
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
