k8s/user-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-server
  namespace: lrms
spec:
  selector:
    app: user-server
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
